resources/css/small-screen.css
.header-menu {
    background-image: url(../images/header-background.jpg);
    height: 180px;
    background-size: cover;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    margin-top: 10px;
    border-radius: 5px;
}

.header-menu a { 
    padding: 10px;
    text-decoration: none;
    color: #22224f;
}

.header-menu a:hover,
.side-panel a:hover {
    color:#fbf8ee;
    text-decoration: underline;
    cursor: pointer;
}

.top-right {
    display: flex;
}

.content-library h2 {
    text-align: center;
}

.content-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: auto;
}

.content-container div { 
    width: auto;
    height: 100px;
    text-align: center;
    background: #dddaf4;
    color: #22224f;
    margin: 10px;
    padding: 15px;
    border-radius: 8px;
    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 25%);
}

.content-container div.with-card {
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.content-container div#card-text {
    box-shadow: none;
    padding: 5px;
    line-height: 1.2em;
    height: auto;
}

.content-container a {
    text-decoration: none;
}

.content-container div:hover {
    border:#dddaf4 2px solid;
    cursor: pointer;
}

.content-container div:active {
    border: 2px solid #22224f;
    transition: border 0.1s;
}

.content-container div#card-text:active {
    border: none;
}

div.extra-info {
    display: flex;
}

.side-panel {
    width: 150px;
    margin: auto;
    padding: 5px 15px 15px 15px;
    background-color: #22224f;
    color: #fbf8ee;
    border-radius: 8px;
    text-align: center;
}

.side-panel a, 
.side-panel h1, 
.side-panel h2, 
.side-panel h3 {
    color: #dddaf4; 
}

.side-panel form {
    width: 75px;
    margin: auto;
}

.subscribe {
    margin: auto;
}

.subscribe label {
    color: #473c8b;
}

.subscribe input{
    border-radius: 2px;
    margin-bottom: 5px;
}

.subscribe button {
    margin-top: 5px;
}

footer {
    background-image: url(../images/footer-background.jpg);
    background-size: cover;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 15px;
    margin: 10px 0px;
    color: #22224f;
    border-radius: 5px;
}

